testing six, testing full game, model to 90 coverage, javadoc additions